[modernize] Use Float.valueOf instead of new Float